--- a/templates/order/order_details_validator.html
+++ b/templates/order/order_details_validator.html
@@ -72,7 +72,7 @@
   
   <p><strong>PRIX TOTAL COMMANDE: {{ order.price }} €</strong></p>
   {% if not order.number %}
-    <a href="{% url tab_orders %}" class="disk ajax-post" url="{% url set_item_quantity %}">
+    <a href="{% url order.get_absolute_url %}" class="disk ajax-post" url="{% url set_item_quantity %}">
       Enregistrer les modifications
     </a>
   {% else %}
