forgot to return redirect in some views

--- a/templates/tab_orders_secretary.html
+++ b/templates/tab_orders_secretary.html
@@ -84,7 +84,7 @@
   </div>
 </div>
 
-<div id="setOrderRef" class="dialog" title="Saisie du N° de commande">
+<div id="setOrderNb" class="dialog" title="Saisie du N° de commande">
   <div class="form-row">
     <label for="number">N° de commande:</label>
     <div class="cleaner"></div>
