added budget transfer feature

--- a/templates/order/order_details_secretary.html
+++ b/templates/order/order_details_secretary.html
@@ -10,6 +10,9 @@
   </div>
   <ul>
     <li>Commande équipe {{ order.team }}</li>
+    {% if order.number %}
+      <li>Commande n°{{ order.number }}</li>
+    {% endif %}
     <li>Statut: {{ order.get_status_display }}</li>
     {% if not order.number and not order.provider.is_local %}
       <li><strong>Budget à imputer:</strong>
