--- a/templates/provider/index.html
+++ b/templates/provider/index.html
@@ -6,13 +6,19 @@
 {% block menu_provider %}selected{% endblock %}
 
 {% block buttons %}
-{% if user|is_admin %}
-  <div class="btn_wrapper">
-    <a href="{% url provider_new %}" class="btn_big">
-      <img src="{{ MEDIA_URL }}img/icons/add.png" />Ajouter un fournisseur
-    </a>
-  </div>
-{% endif %}
+{# {% if user|is_admin %} #}
+{#   <div class="btn_wrapper"> #}
+{#     <a href="{% url provider_new %}" class="btn_big"> #}
+{#       <img src="{{ MEDIA_URL }}img/icons/add.png" />Ajouter un fournisseur #}
+{#     </a> #}
+{#   </div> #}
+{# {% endif %} #}
+<div class="btn_wrapper">
+  <a href="{% url provider_new %}" class="btn_big">
+    <img src="{{ MEDIA_URL }}img/icons/add.png" />Ajouter un fournisseur
+  </a>
+</div>
+
 {% endblock %}
 
 {% block content %}
