--- a/templates/order/order_details_secretary.html
+++ b/templates/order/order_details_secretary.html
@@ -14,7 +14,7 @@
       <li>Commande n°{{ order.number }}</li>
     {% endif %}
     <li>Statut: {{ order.get_status_display }}</li>
-    {% if not order.number and not order.provider.is_local %}
+    {% if not user|is_secretary and not order.number and not order.provider.is_local %}
       <li><strong>Budget à imputer:</strong>
         <select id="select-budget" url="{% url order_budget order.id %}">
           {% for budget in budgets %}
@@ -24,9 +24,11 @@
           {% endfor %}
         </select>
       </li>
-    {% else %}{% if order.number and order.budget %}
+    {% else %}{% if user|is_secretary %}
+      <li>Budget à imputer:{{ order.budget }}</li>
+    {% if order.number and order.budget %}
       <li>Budget imputé:{{ order.budget }}</li>
-    {% endif %}{% endif %}
+    {% endif %}{% endif %}{% endif %}
   </ul>
   
   <table class="list">
