--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -48,7 +48,7 @@
   <table class="list">
     <thead>
         <th>Fournisseur</th>
-        <th {% if user|is_admin %}width="210px"{% endif %}>Nom du produit</th>
+        <th {% if user|is_admin %}width="210px"{% endif %}>produit</th>
         <th>Cond.</th>
         <th>Réf.</th>
         <th>Prix</th>
