--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
             Panier
           </a>
         </li>
-        {% if user|is_validator or user|is_secretary_valid %}
+        {% if user|is_validator or user|is_super_secretary %}
           <li>
             <a href="{% url tab_validation %}" class="{% block menu_validation %}{% endblock %}">
               Commandes à valider
@@ -63,7 +63,7 @@
             {% if user|is_secretary %}Commandes à saisir{% else %}Commandes en cours{% endif %}
           </a>
         </li>
-        {% if user|is_secretary %}
+        {% if user|is_super_secretary %}
           <li>
             <a href="{% url budgets %}" class="{% block menu_budgets %}{% endblock %}">
               Gestion des budgets
