--- a/templates/tab_budgets.html
+++ b/templates/tab_budgets.html
@@ -28,11 +28,11 @@
   {% if budgets.object_list %}
     <table class="list">
       <thead>
-        <th>Nom</th>
         <th>Equipe</th>
+        <th>Nom</th>
+        <th>Origine</th>
         <th>Tutelle</th>
         <th>Nature</th>
-        <th>Type de crédit</th>
         <th>Montant disponible</th>
         <th>Action</th>
       </thead>
@@ -40,11 +40,11 @@
       <tbody>
         {% for budget in budgets.object_list %}
           <tr class="{% cycle 'even' 'odd' %}">
-            <td>{{ budget.name }}</td>
             <td>{{ budget.team }}</td>
+            <td>{{ budget.name }}</td>
+            <td>{{ budget.default_origin }}</td>
             <td>{{ budget.get_budget_type_display }}</td>
             <td>{{ budget.default_nature }}</td>
-            <td>{{ budget.default_credit_type }}</td>
             <td>{{ budget.get_amount_left }}</td>
             <td>
               <a href="{% url budgetlines %}?budget_name={{budget.name}}" class="zoomin button">
