--- a/templates/tab_reports.html
+++ b/templates/tab_reports.html
@@ -41,22 +41,22 @@
   
   <table class="list">
     <thead>
-      <th widht="50px">budget</th>
-      <th width="80px">n° de cmde</th>
-      <th width="100px">date de l'acte</th>
-      <th width="50px">nature</th>
-      <th width="50px">tutelle</th>
-      <th width="50px">type de crédit</th>
-      <th width="100px">fournisseur</th>
-      <th width="80px">offre</th>
-      <th>désignation</th>
-      <th width="50px">ref</th>
-      <th width="90px">crédit</th>
-      <th width="90px">débit</th>
-      <th width="50px">qté</th>
-      <th width="80px">Montant total</th>
-      <th width="80px">Montant dispo</th>
-      <th width="70px"></th>
+      <th>budget</th>
+      <th>n° de cmde</th>
+      <th>date de l'acte</th>
+      <th>nature</th>
+      <th>tutelle</th>
+      <th>origine</th>
+      <th>fournisseur</th>
+      <th>offre</th>
+      <th style="max-width:200px">désignation</th>
+      <th>ref</th>
+      <th>crédit</th>
+      <th>débit</th>
+      <th>qté</th>
+      <th>Montant total</th>
+      <th>Montant dispo</th>
+      <th></th>
     </thead>
       
     <tbody>
