--- a/templates/tab_budgets.html
+++ b/templates/tab_budgets.html
@@ -4,21 +4,25 @@
 {% block menu_budgets %}selected{% endblock %}
 
 {% block buttons %}
-  <div class="btn_wrapper">
-    <a href="{% url budget_new %}" class="btn_medium">
-      <img src="{{ MEDIA_URL }}img/icons/add.png" />Ajouter un budget
-    </a>
-  </div>
+  {% if user|is_secretary or user|is_super_secretary %}
+    <div class="btn_wrapper">
+      <a href="{% url budget_new %}" class="btn_medium">
+        <img src="{{ MEDIA_URL }}img/icons/add.png" />Ajouter un budget
+      </a>
+    </div>
+  {% endif %}
   <div class="btn_wrapper">
     <a href="{% url budgetlines %}" class="btn_big">
       <img src="{{ MEDIA_URL }}img/icons/magnifier.png" />Détail de tous les budgets
     </a>
   </div>
-  <div class="btn_wrapper">
-    <a href="{% url budget_transfer %}" class="btn_medium">
-      <img src="{{ MEDIA_URL }}img/icons/table_refresh.png" />Virement
-    </a>
-  </div>
+  {% if user|is_secretary or user|is_super_secretary %}
+    <div class="btn_wrapper">
+      <a href="{% url budget_transfer %}" class="btn_medium">
+        <img src="{{ MEDIA_URL }}img/icons/table_refresh.png" />Virement
+      </a>
+    </div>
+  {% endif %}
 {% endblock %}
 
 {% block content %}
@@ -55,12 +59,14 @@
                   Editer
                 </a>
               {% endif %}
-              <a href="{% url credit_budget budget.id %}" class="plus button">
-                Créditer
-              </a>
-              <a href="{% url debit_budget budget.id %}" class="minus button">
-                Débiter
-              </a>
+              {% if user|is_secretary or user|is_super_secretary %}
+                <a href="{% url credit_budget budget.id %}" class="plus button">
+                  Créditer
+                </a>
+                <a href="{% url debit_budget budget.id %}" class="minus button">
+                  Débiter
+                </a>
+                {% endif %}
             </td>
           </tr>
         {% endfor %}
