csv import does not work yet

--- a/templates/provider/import.html
+++ b/templates/provider/import.html
@@ -13,6 +13,8 @@
   </div>
   <br />
   
+  <h1>NE FONCTIONNE PAS POUR LE MOMENT</h1>
+  
   <h3>Informations</h3>
   <ul>
     <li>Les produits actuels seront remplacés par les données du fichier importé.</li>
