changed csv import to be more explicit

--- a/templates/order/order_details_secretary.html
+++ b/templates/order/order_details_secretary.html
@@ -25,7 +25,7 @@
         </select>
       </li>
     {% else %}{% if user|is_secretary %}
-      <li>Budget à imputer:{{ order.budget }}</li>
+      <li>Budget à imputer:{{ order.budget|default:"A DEFINIR" }}</li>
     {% if order.number and order.budget %}
       <li>Budget imputé:{{ order.budget }}</li>
     {% endif %}{% endif %}{% endif %}
