can select no team in history filter form

--- a/templates/order/order_details_secretary.html
+++ b/templates/order/order_details_secretary.html
@@ -9,10 +9,22 @@
     <h2>Détail commande {{ order.provider }} du {{ order.date_created|date }}</h2>
   </div>
   <ul>
-    <li>Commande équipe {{ order.team }}</li>
     {% if order.number %}
-      <li>Commande n°{{ order.number }}</li>
+      {% if user|is_secretary or user|is_super_secretary %}
+        <li>Commande n° 
+          <input type="text"
+            id="order_number"
+            url="{% url set_order_number order.id %}"
+            value="{{ order.number }}"
+            style="float:none;display:inline"
+          />
+        </li>
+      {% else %}
+        <li>Commande n°{{ order.number }}</li>
+      {% endif %}
+      
     {% endif %}
+    <li>Commande équipe {{ order.team }}</li>
     <li>Statut: {{ order.get_status_display }}</li>
     {% if not user|is_secretary and not order.number and not order.provider.is_local %}
       <li><strong>Budget à imputer:</strong>
@@ -25,10 +37,12 @@
         </select>
       </li>
     {% else %}{% if user|is_secretary %}
-      <li>Budget à imputer:{{ order.budget|default:"A DEFINIR" }}</li>
-    {% if order.number and order.budget %}
-      <li>Budget imputé:{{ order.budget }}</li>
-    {% endif %}{% endif %}{% endif %}
+      {% if order.number and order.budget %}
+        <li>Budget imputé:{{ order.budget }}</li>
+      {% else %}
+        <li>Budget à imputer:{{ order.budget|default:"A DEFINIR" }}</li>
+      {% endif %}
+    {% endif %}{% endif %}
   </ul>
   
   <table class="list">
