--- a/templates/tab_orders_secretary.html
+++ b/templates/tab_orders_secretary.html
@@ -40,19 +40,27 @@
             <td>
               <a href="{{ order.get_absolute_url }}?next=tab_orders" class="pencil">Voir détail</a>
               {% if order.budget %}
-                <a href="{% url set_next_status order.id %}" class="next-status {{ order|dialogClass|default:"" }}">
-                  {% if order.status == 2 %}
+                {% if order.status == 2 and not user|is_secretary %}
+                  <a href="{% url set_next_status order.id %}" class="next-status">
                     {% if order.budget.budget_type == 0 %}
-                      Saisie n° XLAB
+                      Pour saisie XLAB
                     {% else %}
                       Pour saisie SIFAC
                     {% endif %}
-                  {% else %}{% if order.status == 3 %}
-                    Saisie n° SIFAC
-                  {% else %}{% if order.status == 4 %}
+                  </a>
+                {% else %}{% if order.status == 3 %}
+                  <a href="{% url set_next_status order.id %}" class="next-status setOrderNb">
+                    {% if order.budget.budget_type == 0 %}
+                      Saisie n°XLAB
+                    {% else %}
+                      Saisie n°SIFAC
+                    {% endif %}
+                  </a>
+                {% else %}{% if order.status == 4 %}
+                  <a href="{% url set_next_status order.id %}" class="next-status setDeliveryDate">
                     Commande réceptionnée
-                  {% endif %}{% endif %}{% endif %}
-                </a>
+                  </a>
+                {% endif %}{% endif %}{% endif %}
               {% endif %}
             </td>
           </tr>
