--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
         {% endif %}
         <li>
           <a href="{% url tab_orders %}" class="{% block menu_order %}{% endblock %}">
-            {% if user|is_secretary or user|is_super_secretary %}Commandes à saisir{% else %}Commandes en cours{% endif %}
+            {% if user|in_team_secretary %}Commandes à saisir{% else %}Commandes en cours{% endif %}
           </a>
         </li>
         {% if user|is_super_secretary or user|is_validator or user|is_super_validator %}
