--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -20,12 +20,15 @@
         <tr>
           <td>Fournisseur:</td>
           <td>{{ filter_form.provider }}</td>
-          <td width="10%"></td>
+          <td width="5%"></td>
           <td>Produit:</td>
           <td>{{ filter_form.name }}</td>
-          <td width="10%"></td>
+          <td width="5%"></td>
           <td>Référence:</td>
           <td>{{ filter_form.reference }}</td>
+          <td width="5%"></td>
+          <td>Fournisseur d'origine:</td>
+          <td>{{ filter_form.origin }}</td>
         </tr>
       </table>
       <div class="cleaner"></div>
