--- a/templates/tab_reports.html
+++ b/templates/tab_reports.html
@@ -58,7 +58,7 @@
       <th>qté</th>
       <th>Total</th>
       <th>Dispo</th>
-      {% if user|is_secretary or user|is_super_secretary %}
+      {% if user|in_team_secretary %}
         <th></th>
       {% endif %}
     </thead>
@@ -91,8 +91,8 @@
           <td style="color:red">{{ budget_line.debit|default:"" }}</td>
           <td>{{ budget_line.quantity|default:1 }}</td>
           <td>{{ budget_line.product_price|default:"" }}</td>
-          <td>{{ budget_line.get_amount_left }}</td>
-          {% if user|is_secretary or user|is_super_secretary %}
+          <td><strong>{{ budget_line.get_amount_left }}</strong></td>
+          {% if user|in_team_secretary %}
             <td style="white-space:nowrap">
               <a href="{% url budgetline_edit budget_line.id %}" class="pencil no-text"></a>
               <a href="{% url budgetline_delete budget_line.id %}" class="trash confirmDel no-text"></a>
